general updates & new icons

--- a/public/html/feedVagas.html
+++ b/public/html/feedVagas.html
@@ -14,8 +14,20 @@
 <body>
 
     <!--Início Header-->
+    <!--Header caso o usuário esteja vendo sem estar logado-->
     <div class="divHeaderFather">
-        <div></div>
+        <div class="divHeaderContainer">
+            <a href="../index.html"><img src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"></a>
+
+            <div class="divButtons">
+            <button class="buttonHeader" style="margin-right: 5%"><a class="li-comum" href="login.html">Entrar</a></button>
+            <button class="buttonHeader"><a class="li-comum" href="cadastro.html">Cadastre-se</a></button>
+            </div>
+
+            <a href="../index.html"><img src="../Logo-Dev4Me/"></a>
+        </div>
+    </div>
+    <div class="divSideBar">
 
     </div>
     <!--Fim Header-->
