--- a/public/html/feedVagas.html
+++ b/public/html/feedVagas.html
@@ -20,11 +20,11 @@
             <a href="../index.html"><img src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"></a>
 
             <div class="divButtons">
-            <button class="buttonHeader" style="margin-right: 5%"><a class="li-comum" href="login.html">Entrar</a></button>
-            <button class="buttonHeader"><a class="li-comum" href="cadastro.html">Cadastre-se</a></button>
+            <button class="buttonHeader" style="margin-right: 3%"><a class="li-comum" href="./login.html">Entrar</a></button>
+            <button class="buttonHeader" style="margin-right: 7%"><a class="li-comum" href="./cadastro.html">Cadastre-se</a></button>
+            <a href="./feedVagas.html" style="margin-right: 7%;"><img class="imgProfile" src="../img/user-profile-white.png"></a>
+            <a href="./feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"></a>
             </div>
-
-            <a href="../index.html"><img src="../Logo-Dev4Me/"></a>
         </div>
     </div>
     <div class="divSideBar">
