--- a/public/html/feedVagas.html
+++ b/public/html/feedVagas.html
@@ -40,8 +40,51 @@
         <div class="divSideBar">
             <div class="divSideBarContainer">
                 <div class="divSpaceBetween">
-                    <p class="bigTitle">Filtrar busca</p>
+                    <p class="bigTitle">Filtrar Busca</p>
                     <img class="imgIcon2" src="../img/reload.png">
+                </div>
+
+                <div class="divAlignLeft">
+                    <p class="subtitle">Buscar por Tags</p>
+                    <input class="searchBar" type="search" placeholder="Digite uma tag">
+                </div>
+
+                <div class="marginBox">
+
+                </div>
+
+                <div class="divAlignLeft">
+                    <p class="subtitle">Buscar por Localização</p>
+                    <input class="searchBar" type="search" placeholder="Digite uma localização">
+                </div>
+
+                <div class="boxInline">
+                    <div class="boxCheckbox">
+                        <p class="smallText">remoto</p>
+                        <input class="checkbox" type="checkbox" checked>
+                    </div>
+
+                    <div class="boxCheckbox">
+                        <p class="smallText">híbrido</p>
+                        <input class="checkbox" type="checkbox" checked>
+                    </div>
+
+                    <div class="boxCheckbox">
+                        <p class="smallText">presencial</p>
+                        <input class="checkbox" type="checkbox" checked>
+                    </div>
+                </div>
+
+                <div class="divAlignLeft">
+                    <p class="subtitle">Buscar por Faixa Salarial</p>
+                    <div class="divSpaceBetween2">
+                        <p class="subtitle">de:</p>
+                        <input class="searchBarSmall" type="search" placeholder="R$ 4000,00">
+                    </div>
+                    <div class="divSpaceBetween2">
+                        <p class="subtitle">até:</p>
+                        <input class="searchBarSmall" type="search" placeholder="R$ 6500,00">
+                    </div>
                 </div>
             </div>
         </div>
