scrollbar config & general updates

--- a/public/html/feedVagas.html
+++ b/public/html/feedVagas.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <!--Início Header-->
+    <!--Header-->
     <!--Header caso o usuário esteja vendo sem estar logado-->
     <div class="divHeaderFather">
         <div class="divHeaderContainer">
@@ -33,10 +33,10 @@
                         onmouseover="src='../img/home-button-blue.png';"
                         onmouseout="src='../img/home-button-white.png';"></a>
 
-                <!-- <input class="searchBar" type="search" placeholder="Search..."> -->
-
             </div>
         </div>
+
+        <!--Sidebar-->
         <div class="divSideBar">
             <div class="divSideBarContainer">
                 <div class="divSpaceBetween">
@@ -88,14 +88,12 @@
                 </div>
             </div>
         </div>
-        <!--Fim Header-->
+    </div>
+
+    <div class="divFeedFormatter">
+        
+    </div>
 
 </body>
 
 </html>
-
-<script>
-    function changeIconProfile() {
-
-    }
-</script>
