--- a/public/html/feedVagas.html
+++ b/public/html/feedVagas.html
@@ -17,7 +17,7 @@
     <!--Header caso o usuário esteja vendo sem estar logado-->
     <div class="divHeaderFather">
         <div class="divHeaderContainer">
-            <a href="../index.html"><img src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
+            <a href="../index.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
                     onmouseover="src='../Logo-Dev4Me/logo-nome-degrade-dev4me.png';"
                     onmouseout="src='../Logo-Dev4Me/logo-nome-simples-dev4me.png';"></a>
 
@@ -145,7 +145,7 @@
                     </div>
 
                     <div>
-                        
+
                     </div>
                 </div>
             </div>
