small style updates and new page

--- a/Site/public/html/feedVagas.html
+++ b/Site/public/html/feedVagas.html
@@ -130,7 +130,7 @@
                     <div class="divSpaceBetween3">
                         <div class="divPayment" type="search">&nbsp&nbspSalário: R$ 4000,00 até R$ 6500,00</div>
                         <button class="alternativeButton"><a class="li-comum"
-                            href="./login.html">Ver mais</a></button>
+                            href="./feedVagasVaga.html" target="_blank">Ver mais</a></button>
                     </div>
 
                     <div>
@@ -193,7 +193,7 @@
                     <div class="divSpaceBetween3">
                         <div class="divPayment" type="search">&nbsp&nbspSalário: R$ 4000,00 até R$ 6500,00</div>
                         <button class="alternativeButton"><a class="li-comum"
-                            href="./login.html">Ver mais</a></button>
+                            href="./feedVagasVaga.html" target="_blank">Ver mais</a></button>
                     </div>
 
                     <div>
@@ -256,7 +256,7 @@
                     <div class="divSpaceBetween3">
                         <div class="divPayment" type="search">&nbsp&nbspSalário: R$ 4000,00 até R$ 6500,00</div>
                         <button class="alternativeButton"><a class="li-comum"
-                            href="./login.html">Ver mais</a></button>
+                            href="./feedVagasVaga.html" target="_blank">Ver mais</a></button>
                     </div>
 
                     <div>
