--- a/Site/public/html/feedVagasVaga.html
+++ b/Site/public/html/feedVagasVaga.html
@@ -21,16 +21,14 @@
                     onmouseover="src='../Logo-Dev4Me/logo-nome-degrade-dev4me.png';"
                     onmouseout="src='../Logo-Dev4Me/logo-nome-simples-dev4me.png';"></a>
 
-            <div class="divButtons">
-                <button class="buttonHeaderInvisible" style="margin-right: 3%;"></button>
-                <button class="buttonHeaderInvisible" style="margin-right: 7%"></button>
-                <a href="./feedVagas.html" style="margin-right: 7%;"><img class="imgProfile"
-                        src="../img/user-profile-white.png" onmouseover="src='../img/user-profile-blue.png';"
+
+            <div class="divHeaderIconsOrganizer">
+                <a style="margin-right: 7%;" href="./feedVagas.html"><img class="imgProfile"" src="../img/user-profile-white.png"
+                        onmouseover="src='../img/user-profile-blue.png';"
                         onmouseout="src='../img/user-profile-white.png';"></a>
                 <a href="./feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
                         onmouseover="src='../img/home-button-blue.png';"
                         onmouseout="src='../img/home-button-white.png';"></a>
-
             </div>
         </div>
     </div>
