--- a/Site/public/html/feedVagasVaga.html
+++ b/Site/public/html/feedVagasVaga.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../Logo-Dev4Me/logo-207x207.png">
-    <link rel="stylesheet" href="../css/feedVagas.css">
+    <link rel="stylesheet" href="../css/feedVagasVaga.css">
     <link rel="stylesheet" href="../css/headerInstitucional.css">
     <title>Dev4me</title>
 </head>
