--- a/Site/public/html/feedVagasVaga.html
+++ b/Site/public/html/feedVagasVaga.html
@@ -36,7 +36,8 @@
     <!--Vaga-->
     <div class="divVagaFather">
         <div class="divVagaBody">
-
+            <div class="divVagaContent"></div>
+            <div class="divVagaContent"></div>
         </div>
     </div>
 
