--- a/Site/public/html/feedVagas.html
+++ b/Site/public/html/feedVagas.html
@@ -108,9 +108,8 @@
                             <p class="contentText"> Desenvolvimento de aplicações front-end com React; <br>
                                 Participar ativamente em soluções para os aplicativos desenvolvidos; <br>
                                 Utilizará boas práticas e código limpo; <br>
-                                Conhecimento em Design Patterns; <br>
-                                Localização: São Paulo, SP; <br>
-                                Contrato: Híbrido.
+                                Localização📍: São Paulo, SP; <br>
+                                Contrato📑: Híbrido.
                                 </p>
                         </div>
                     </div>
@@ -154,26 +153,26 @@
                             <p class="contentText"> Desenvolvimento de aplicações front-end com React; <br>
                                 Participar ativamente em soluções para os aplicativos desenvolvidos; <br>
                                 Utilizará boas práticas e código limpo; <br>
-                                Conhecimento em Design Patterns; <br>
-                                Localização: São Paulo, SP; <br>
+                                Localização📍: São Paulo, SP; <br>
+                                Contrato📑: Híbrido.: São Paulo, SP; <br>
                                 Contrato: Híbrido.
                                 Desenvolvimento de aplicações front-end com React; <br>
                                 Participar ativamente em soluções para os aplicativos desenvolvidos; <br>
                                 Utilizará boas práticas e código limpo; <br>
-                                Conhecimento em Design Patterns; <br>
-                                Localização: São Paulo, SP; <br>
+                                Localização📍: São Paulo, SP; <br>
+                                Contrato📑: Híbrido.: São Paulo, SP; <br>
                                 Contrato: Híbrido.
                                 Desenvolvimento de aplicações front-end com React; <br>
                                 Participar ativamente em soluções para os aplicativos desenvolvidos; <br>
                                 Utilizará boas práticas e código limpo; <br>
-                                Conhecimento em Design Patterns; <br>
-                                Localização: São Paulo, SP; <br>
+                                Localização📍: São Paulo, SP; <br>
+                                Contrato📑: Híbrido.: São Paulo, SP; <br>
                                 Contrato: Híbrido.
                                 Desenvolvimento de aplicações front-end com React; <br>
                                 Participar ativamente em soluções para os aplicativos desenvolvidos; <br>
                                 Utilizará boas práticas e código limpo; <br>
-                                Conhecimento em Design Patterns; <br>
-                                Localização: São Paulo, SP; <br>
+                                Localização📍: São Paulo, SP; <br>
+                                Contrato📑: Híbrido.: São Paulo, SP; <br>
                                 Contrato: Híbrido.</p>
                         </div>
                     </div>
@@ -217,26 +216,26 @@
                             <p class="contentText"> Desenvolvimento de aplicações front-end com React; <br>
                                 Participar ativamente em soluções para os aplicativos desenvolvidos; <br>
                                 Utilizará boas práticas e código limpo; <br>
-                                Conhecimento em Design Patterns; <br>
-                                Localização: São Paulo, SP; <br>
+                                Localização📍: São Paulo, SP; <br>
+                                Contrato📑: Híbrido.: São Paulo, SP; <br>
                                 Contrato: Híbrido.
                                 Desenvolvimento de aplicações front-end com React; <br>
                                 Participar ativamente em soluções para os aplicativos desenvolvidos; <br>
                                 Utilizará boas práticas e código limpo; <br>
-                                Conhecimento em Design Patterns; <br>
-                                Localização: São Paulo, SP; <br>
+                                Localização📍: São Paulo, SP; <br>
+                                Contrato📑: Híbrido.: São Paulo, SP; <br>
                                 Contrato: Híbrido.
                                 Desenvolvimento de aplicações front-end com React; <br>
                                 Participar ativamente em soluções para os aplicativos desenvolvidos; <br>
                                 Utilizará boas práticas e código limpo; <br>
-                                Conhecimento em Design Patterns; <br>
-                                Localização: São Paulo, SP; <br>
+                                Localização📍: São Paulo, SP; <br>
+                                Contrato📑: Híbrido.: São Paulo, SP; <br>
                                 Contrato: Híbrido.
                                 Desenvolvimento de aplicações front-end com React; <br>
                                 Participar ativamente em soluções para os aplicativos desenvolvidos; <br>
                                 Utilizará boas práticas e código limpo; <br>
-                                Conhecimento em Design Patterns; <br>
-                                Localização: São Paulo, SP; <br>
+                                Localização📍: São Paulo, SP; <br>
+                                Contrato📑: Híbrido.: São Paulo, SP; <br>
                                 Contrato: Híbrido.</p>
                         </div>
                     </div>
