--- a/Site/public/html/feedVagasVaga.html
+++ b/Site/public/html/feedVagasVaga.html
@@ -36,7 +36,9 @@
     <!--Vaga-->
     <div class="divVagaFather">
         <div class="divVagaBody">
-            <div class="divVagaContent"></div>
+            <div class="divVagaContent">
+                <p class="pageTitle">Desenvolvedor Front-end Júnior</p>
+            </div>
             <div class="divVagaContent"></div>
         </div>
     </div>
