--- a/Site/public/html/feedVagasVaga.html
+++ b/Site/public/html/feedVagasVaga.html
@@ -23,8 +23,8 @@
 
 
             <div class="divHeaderIconsOrganizer">
-                <a style="margin-right: 7%;" href="./feedVagas.html"><img class="imgProfile"" src="../img/user-profile-white.png"
-                        onmouseover="src='../img/user-profile-blue.png';"
+                <a style="margin-right: 7%;" href="./feedVagas.html"><img class="imgProfile"" src="
+                        ../img/user-profile-white.png" onmouseover="src='../img/user-profile-blue.png';"
                         onmouseout="src='../img/user-profile-white.png';"></a>
                 <a href="./feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
                         onmouseover="src='../img/home-button-blue.png';"
@@ -37,9 +37,67 @@
     <div class="divVagaFather">
         <div class="divVagaBody">
             <div class="divVagaContent">
-                <p class="pageTitle">Desenvolvedor Front-end Júnior</p>
+
+                <div class="divPageTitle">
+                    <p class="pageTitle">Desenvolvedor Front-end Júnior</p>
+                </div>
+
+                <div class="divSpaceBetween">
+                    <div class="divSmallBox">
+                        <div class="divTitle">
+                            <p class="subtitle">Localização</p>
+                            <img src="../img/local.png">
+                        </div>
+                        <div class="divInputFormatter">
+                            <div class="divInput">
+                                <p class="smallText">São Paulo, SP</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="divSmallBox">
+                        <div class="divTitle">
+                            <p class="subtitle">Contrato</p>
+                            <img src="../img/contract.png">
+                        </div>
+                        <div class="divInputFormatter">
+                            <div class="divInput">
+                                <p class="smallText">Híbrido</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="divSmallBox">
+                        <div class="divTitle">
+                            <p class="subtitle">Salário</p>
+                            <img src="../img/payment.png">
+                        </div>
+                        <div class="divInputFormatter">
+                            <div class="divInput">
+                                <p class="smallText">R$ 3500,00 até 4500,00</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="divBigBox">
+                    <div class="divTitle">
+                        <p class="subtitle">Descrição</p>
+                    </div>
+                    <div class="divInputFormatter">
+                        <div class="divBigInput">
+                            <p class="smallText">Desenvolvimento de aplicações front-end com React;
+                                <br> <br>
+                                Participar ativamente em soluções para os aplicativos desenvolvidos;
+                                <br> <br>
+                                Utilizará boas práticas e código limpo;
+                                <br> <br>
+                                Conhecimento em Design Patterns.
+                                </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="divVagaContent"></div>
         </div>
     </div>
 
