responsive page complete

--- a/Site/public/html/feedVagasVaga.html
+++ b/Site/public/html/feedVagasVaga.html
@@ -97,6 +97,61 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="divBigBox">
+                    <div class="divTitle">
+                        <p class="subtitle">Tags</p>
+                    </div>
+                    <div class="divInputFormatter">
+                        <div class="divBigInputWrap">
+                            <button class="tagArea">Desenvolvedor</button>
+                            <button class="tagDev">JavaScript</button>
+                            <button class="tagDev">React</button>
+                            <button class="tagDev">NodeJS</button>
+                            <button class="tagPlatform">AWS</button>
+                            <button class="tagPlatform">Azure</button>
+                            <button class="tagBusyness">Agile</button>
+                            <button class="tagBusyness">Scrum</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="divBigBox">
+                    <div class="divTitle">
+                        <p class="subtitle">Requisitos</p>
+                    </div>
+                    <div class="divInputFormatter">
+                        <div class="divBigInput">
+                            <p class="smallText">Participar ativamente em soluções para os aplicativos desenvolvidos;
+                                <br> <br>
+                                Utilizará boas práticas e código limpo;
+                                <br> <br>
+                                Conhecimento em Design Patterns;
+                                <br> <br>
+                                Conhecimento básico de JavaScript e Cloud.
+                                </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="divBigBox">
+                    <div class="divTitle">
+                        <p class="subtitle">Atividades</p>
+                    </div>
+                    <div class="divInputFormatter">
+                        <div class="divBigInput">
+                            <p class="smallText">Criar telas e ajudar em sua ideação;
+                                <br> <br>
+                                Fazer diagramas para documentar códigos;
+                                <br> <br>
+                                Utilizar ferramentas no Azure na AWS.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="divPageButton">
+                    <button class="bigButton">Candidatar-se</button>
+                </div>
             </div>
         </div>
     </div>
