fixing button link

--- a/Site/public/html/feedVagas.html
+++ b/Site/public/html/feedVagas.html
@@ -133,8 +133,8 @@
 
                     <div class="divSpaceBetween3">
                         <div class="divPayment" type="search">&nbsp&nbspSalário: R$ 4000,00 até R$ 6500,00</div>
-                        <button class="alternativeButton"><a class="li-comum" href="./feedVagasVaga.html"
-                                target="_blank">Ver mais</a></button>
+                        <a class="li-comum" href="./feedVagasVaga.html" target="_blank"><button
+                                class="alternativeButton">Ver mais</button></a>
                     </div>
                 </div>
             </div>
@@ -180,8 +180,8 @@
 
                     <div class="divSpaceBetween3">
                         <div class="divPayment" type="search">&nbsp&nbspSalário: R$ 4000,00 até R$ 6500,00</div>
-                        <button class="alternativeButton"><a class="li-comum" href="./feedVagasVaga.html"
-                                target="_blank">Ver mais</a></button>
+                        <a class="li-comum" href="./feedVagasVaga.html" target="_blank"><button
+                                class="alternativeButton">Ver mais</button></a>
                     </div>
                 </div>
             </div>
