--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -38,25 +38,132 @@
     </div>
 
     <!-- banner -->
-    <div>
+    <div class="divBannerFather">
         <div class="divBanner">
             <img class="imgBanner" src="./img/smiling-person-removebg-preview.png">
-            <b class="titulo1">As melhores oportunidades<br>
-                no ramo de tecnologia você só encontra<br>
-                aqui!<br></b>
-            <t3 class="titulo2">
-                Crie seu perfil
-                grátis e analise ofertas.<br>
-                Economize tempo.
-                Encontre vagas conforme suas prefências.<br>
-                Você no controle.
-            </t3>
-            <button class="criarConta" href="cadastro.html">Criar conta </button>
-            <kakau class="titulo3">É uma empresa interessada em contratar novos profissionais de TI?<br>
-                <u class="cliqueAqui" href="cadastro.html">Clique aqui</u></kakau>
+            <div class="bannerContent">
+                <b class="titulo1">As melhores oportunidades<br>
+                    no ramo de tecnologia você só encontra<br>
+                    aqui!<br></b>
+                <p class="titulo2">
+                    Crie seu perfil
+                    grátis e analise ofertas.<br>
+                    Economize tempo.
+                    Encontre vagas conforme suas preferências.<br>
+                    Você no controle.
+                </p>
+                <button class="criarConta" href="cadastro.html">Criar conta </button>
+                <kakau class="titulo3">É uma empresa interessada em contratar novos profissionais de TI?<br>
+                    <u class="cliqueAqui" href="cadastro.html">Clique aqui</u>
+                </kakau>
+            </div>
         </div>
     </div>
     <!-- fim banner -->
+
+
+    <!-- beneficios da nossa plataforma -->
+    <div class="divBeneficiosFather">
+        <div class="beneficiosContent">
+            <p class="beneficio">Gratuito para <br>
+                <degrade class="degrade">profissionais</degrade><br>
+            </p>
+            <p class="contentBeneficio"> Isso mesmo, 100% gratuito para <br>
+                você profissional encontrar a<br>
+                melhor oportunidade para sua<br>
+                carreira.<br><br></p>
+
+
+            <p class="beneficio">Compare<br>
+                <degrade class="degrade">ofertas</degrade><br>
+            </p>
+            <p class="contentBeneficio"> Compare as vagas ofertadas de <br>
+                forma simples e clara, afim de <br>
+                decidir qual o melhor passo a se<br>
+                seguir.<br><br></p>
+
+
+            <p class="beneficio">Busca por<br>
+                <degrade class="degrade">filtros</degrade><br>
+            </p>
+            <p class="contentBeneficio"> Utilize nossos filtros <br>
+                especializados em te ajudar a <br>
+                encontrar o match perfeito <br>
+                entre profissional e projeto.<br><br></p>
+        </div>
+        <img class="imgBeneficios" src="./img/homem feliz beneficios.png">
+    </div>
+
+    <div class="beneficiosContent2">
+        <p class="beneficio">Encontre<br> profissionais<br>
+            <degrade class="degrade">qualificados</degrade><br>
+        </p>
+        <p class="contentBeneficio">Grande variedade de <br>
+            profissionais altamente <br>
+            qualificados, para sua empresa <br>
+            tirar aquele projeto essencial do<br>
+            papel.<br><br></p>
+    </div>
+    <!-- fim dos beneficios da nossa plataforma -->
+
+    <!-- empresas parceiras -->
+    <p class="tituloEmpresa">Algumas das <degrade class="degrade">empresas</degrade> que utilizam <br>
+        nossos serviços:</p>
+    <div class="divEmpresas">
+        <img class="imgEmpresa" src="./img/acc2.png">
+        <img class="imgEmpresa" src="./img/paygo-removebg-preview.png">
+        <img class="imgEmpresa" src="./img/ste.png">
+    </div>
+
+    <!-- fim empresas parceiras -->
+
+
+    <!-- estatisticas -->
+    <p class="tituloEmpresa2"> A <degrade class="degrade">Dev4me</degrade> é eficiente tanto para empresas<br>
+        quanto para profissionais de TI:</p>
+    <div class="divCards">
+        <div class="card">
+
+            <i>+ <br>
+                4.500<br>
+                empresas<br> contratando</i>
+        </div>
+        <div class="card">
+
+            <i>+ <bR>
+                120.000<br>
+                convites<br>
+                de entrevista</i>
+        </div>
+        <div class="card">
+
+            <i>+ <br>
+                90%<br>
+                recebem<br>
+                convites</i>
+        </div>
+    </div>
+    <!-- fim estatisticas -->
+
+    <!-- footer -->
+    <div class="footer">
+        <div class="container">
+            <div class="responsiveFooter">
+                <div class="company">
+                    <a href="#"><img src="./Logo-Dev4Me/logo-nome-simples-dev4me.png"></a>
+                    
+                   
+                </div>
+
+                <div>
+                    <h3 class="copyright">Copyright © 2022 - Todos os direitos reservados - Dev4me</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+     <!-- fim footer -->
 
 </body>
 
