--- a/Site/public/index.html
+++ b/Site/public/index.html
@@ -150,7 +150,9 @@
         <div class="container">
             <div class="responsiveFooter">
                 <div class="company">
-                    <a href="#"><img src="./Logo-Dev4Me/logo-nome-simples-dev4me.png"></a>
+                    <a href="#"><img class="logo" src="./Logo-Dev4Me/logo-nome-simples-dev4me.png"
+                        onmouseover="src='./Logo-Dev4Me/logo-nome-degrade-dev4me.png';"
+                        onmouseout="src='./Logo-Dev4Me/logo-nome-simples-dev4me.png';"></a>
                     
                    
                 </div>
