general update part 1

--- a/Site/public/html/cadastroVaga.html
+++ b/Site/public/html/cadastroVaga.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/headerInstitucional.css">
     <link rel="stylesheet" href="../css/feedVagas.css">
     <link rel="stylesheet" href="../css/cadastroVaga.css">
-    <title>Dev4me</title>
+    <title>Cadastrar Vaga</title>
 </head>
 
 <body>
@@ -57,7 +57,7 @@
                     <div id="text">caso seja uma vaga remota, a localização ficará como “remota”</div>
                     <br>
                     <div style="text-align: center;">
-                        <button class="grayButton" onclick="avancar1()" style="">Avançar</button>
+                        <button class="grayButton" onclick="avancar1()">Avançar</button>
                     </div>
                 </div>
 
