--- a/Site/public/html/cadastroVaga.html
+++ b/Site/public/html/cadastroVaga.html
@@ -23,7 +23,7 @@
                     onmouseout="src='../Logo-Dev4Me/logo-nome-simples-dev4me.png';"></a>
 
             <div class="divButtons">
-                <a href="./feedVagas.html" style="margin-right: 7%;"><img class="imgProfile"
+                <a href="./perfilEmpresa.html" style="margin-right: 7%;"><img class="imgProfile"
                         src="../img/user-profile-white.png" onmouseover="src='../img/user-profile-blue.png';"
                         onmouseout="src='../img/user-profile-white.png';"></a>
                 <a href="./feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
@@ -96,7 +96,7 @@
                         <textarea style="height: 70px;" name="" id="" cols="30" rows="10" placeholder="Descreva os requisitos para a vaga"></textarea>
                     </div>
                     <div style="text-align: center;">
-                        <button style="margin-top: 20px; background-color: #1E9CD7;" class="grayButton" style="">Avançar</button>
+                        <button style="margin-top: 20px; background-color: #1E9CD7;" class="grayButton" style="">Publicar</button>
                     </div>
                 </div>
             </div>
