Feed Empresa done

--- a/Site/public/html/feedVagas.html
+++ b/Site/public/html/feedVagas.html
@@ -39,6 +39,10 @@
                 <!--Search bar mobile-->
                 <div class="divMobile">
                     <div class="divMobileOrganizer" style="margin-left: 5%;">
+                        <div class="divSpaceBetween">
+                            <p class="bigTitle">Filtrar Busca</p>
+                            <img class="imgIcon2" src="../img/reload.png">
+                        </div>
         
                         <div class="divAlignLeft">
                             <p class="subtitle">Buscar por Localização</p>
@@ -64,6 +68,9 @@
                     </div>
         
                     <div class="divMobileOrganizer" style="margin-right: 5%;">
+                        <div class="divSpaceBetween">
+                            <p class="bigTitle" style="color: #383838;">Filtrar Busca</p>
+                        </div>
                         <div class="divAlignLeft">
                             <p class="subtitle">Buscar por Tags</p>
                             <input class="searchBarMobile" type="search" placeholder="Digite uma tag">
