correcao css cadastro

--- a/Site/public/html/homepage.html
+++ b/Site/public/html/homepage.html
@@ -16,7 +16,7 @@
     <!--Header caso o usuário esteja vendo sem estar logado-->
     <div class="divHeaderFather" style="position: inherit;">
         <div class="divHeaderContainer">
-            <a href="./index.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
+            <a href="./homepage.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
                     onmouseover="src='../Logo-Dev4Me/logo-nome-degrade-dev4me.png';"
                     onmouseout="src='../Logo-Dev4Me/logo-nome-simples-dev4me.png';"></a>
 
@@ -24,7 +24,7 @@
                 <button class="buttonHeader" style="margin-right: 3%"><a class="li-comum"
                         href="./login.html">Entrar</a></button>
                 <button class="buttonHeader" style="margin-right: 7%"><a class="li-comum"
-                        href="./cadastro.html">Cadastre-se</a></button>
+                        href="http://localhost:3000/cadastro">Cadastre-se</a></button>
                 <a href="./feedVagas.html" style="margin-right: 7%;"><img class="imgProfile"
                         src="../img/user-profile-white.png" onmouseover="src='../img/user-profile-blue.png';"
                         onmouseout="src='../img/user-profile-white.png';"></a>
