--- a/Site/public/html/feedEmpresa.html
+++ b/Site/public/html/feedEmpresa.html
@@ -91,7 +91,7 @@
                     </div>
 
                     <div class="divAlignLeft">
-                        <p class="subtitle">Criar nova vaga</p>
+                        <p class="subtitle"></p>
                         <a class="li-comum" href="../html/cadastroVaga.html" target="_blank">
                             <button class="alternativeButton">Criar vaga</button>
                         </a>
