--- a/Site/public/html/feedVagas.html
+++ b/Site/public/html/feedVagas.html
@@ -26,12 +26,12 @@
                         href="./login.html">Entrar</a></button>
                 <button class="buttonHeader" style="margin-right: 7%"><a class="li-comum"
                         href="./cadastro.html">Cadastre-se</a></button>
-                <a href="./feedVagas.html" style="margin-right: 7%;"><img class="imgProfile"
+                <a href="./perfilEmpresa.html" style="margin-right: 7%;"><img class="imgProfile"
                         src="../img/user-profile-white.png" onmouseover="src='../img/user-profile-blue.png';"
                         onmouseout="src='../img/user-profile-white.png';"></a>
                 <a href="./feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
-                        onmouseover="src='../img/home-button-blue.png';"
-                        onmouseout="src='../img/home-button-white.png';"></a>
+                        onmouseout="src='../img/home-button-blue.png';"
+                        onmouseover="src='../img/home-button-white.png';"></a>
 
             </div>
         </div>
