Pequena correção na página de candidatos V2.1

--- a/Site/public/html/perfilCandidato.html
+++ b/Site/public/html/perfilCandidato.html
@@ -43,7 +43,7 @@
                     <div>
                         <p class="infos"> Informações gerais</p>
                     </div>
-                    <div><a class="infos2" href="feedVagas.html">Mudar Senha</a></div>
+                    <div><a class="infos2" href="">Mudar Senha</a></div>
                     <div><a class="li-comum" href="../html/feedVagas.html" target="_blank">
                             <button class="alternativeButton">Buscar Vagas</button>
                             <div><a class="sair" href="login.html">Sair</a>
