small updates, changes needed

--- a/Site/public/html/perfilCandidato.html
+++ b/Site/public/html/perfilCandidato.html
@@ -63,7 +63,7 @@
         <p>Gabriel Vieira da Silva</p>
     </div></div>
 
-    <div><p class="idadeTitle">Idade</p></div>
+    <div><p class="nomeTitle2">Idade</p></div>
     <div class="cardBody">
     <div class="nomeDesc">
         <p>25 anos</p>
@@ -75,22 +75,32 @@
         <p>Isso aprecerá no feed de contratação<br></p>
     </div></div>
 
-    <div><p class="nomeTitle3">Conte-nos sua trajetória</p></div>
+    <div><p class="nomeTitle2">Conte-nos sua trajetória</p></div>
     <div class="cardBody3">
     <div class="nomeDesc">
         <p>Qual foi sua trajetória Acadêmica e Profissional?</p>
     </div></div>
 
-    <div><p class="nomeTitle4">Habilidades</p></div>
-    <div class="cardBody4">
+    <div><p class="nomeTitle2">Habilidades</p></div>
+    <div class="cardBody3">
     <div class="nomeDesc">
         <p>Preencha com suas habilidades mais marcantes</p>
     </div></div>
 
-    <div><p class="tagsTitle4">Tags</p></div>
+    <div><p class="nomeTitle2">Tags</p></div>
     <div class="cardBody4">
-    <div class="nomeDesc">
-        <p>Aqui vão as suas tags selecionadas</p>
+        <div class="divTagsFormatter">
+            <div class="divTags">
+                <button class="tagArea">Desenvolvedor</button>
+                <button class="tagDev">JavaScript</button>
+                <button class="tagDev">React</button>
+                <button class="tagDev">NodeJS</button>
+                <button class="tagPlatform">AWS</button>
+                <button class="tagPlatform">Azure</button>
+                <button class="tagBusyness">Agile</button>
+                <button class="tagBusyness">Scrum</button>
+            </div>
+        </div>
     </div></div>
     
 </div>
