--- a/Site/public/html/feedVagas.html
+++ b/Site/public/html/feedVagas.html
@@ -23,15 +23,15 @@
 
             <div class="divButtons">
                 <button class="buttonHeader" style="margin-right: 3%"><a class="li-comum"
-                        href="./login.html">Entrar</a></button>
+                        href="localhost:3000/login">Entrar</a></button>
                 <button class="buttonHeader" style="margin-right: 7%"><a class="li-comum"
-                        href="./cadastro.html">Cadastre-se</a></button>
-                <a href="./perfilEmpresa.html" style="margin-right: 7%;"><img class="imgProfile"
+                        href="localhost:3000/cadastro">Cadastre-se</a></button>
+                <a href="localhost:3000/html/perfilCandidato" style="margin-right: 7%;"><img class="imgProfile"
                         src="../img/user-profile-white.png" onmouseover="src='../img/user-profile-blue.png';"
                         onmouseout="src='../img/user-profile-white.png';"></a>
-                <a href="./feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
-                        onmouseout="src='../img/home-button-blue.png';"
-                        onmouseover="src='../img/home-button-white.png';"></a>
+                <a href="localhost:3000/html/feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
+                        onmouseover="src='../img/home-button-blue.png';"
+                        onmouseout="src='../img/home-button-white.png';"></a>
 
             </div>
         </div>
