--- a/Site/public/html/homepageAlt.html
+++ b/Site/public/html/homepageAlt.html
@@ -12,23 +12,23 @@
 </head>
 
 <body>
-    <!--Header-->
+<!--Header-->
     <!--Header caso o usuário esteja vendo sem estar logado-->
-    <div class="divHeaderFather" style="position: inherit;">
+    <div class="divHeaderFather">
         <div class="divHeaderContainer">
-            <a href="./index.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
+            <a href="../index.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
                     onmouseover="src='../Logo-Dev4Me/logo-nome-degrade-dev4me.png';"
                     onmouseout="src='../Logo-Dev4Me/logo-nome-simples-dev4me.png';"></a>
 
             <div class="divButtons">
                 <button class="buttonHeader" style="margin-right: 3%"><a class="li-comum"
-                        href="./login.html">Entrar</a></button>
+                        href="localhost:3000/login">Entrar</a></button>
                 <button class="buttonHeader" style="margin-right: 7%"><a class="li-comum"
-                        href="./cadastro.html">Cadastre-se</a></button>
-                <a href="./feedVagas.html" style="margin-right: 7%;"><img class="imgProfile"
+                        href="localhost:3000/cadastro">Cadastre-se</a></button>
+                <a href="localhost:3000/cadastro" style="margin-right: 7%;"><img class="imgProfile"
                         src="../img/user-profile-white.png" onmouseover="src='../img/user-profile-blue.png';"
                         onmouseout="src='../img/user-profile-white.png';"></a>
-                <a href="./feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
+                <a href="localhost:3000/html/feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
                         onmouseover="src='../img/home-button-blue.png';"
                         onmouseout="src='../img/home-button-white.png';"></a>
 
