--- a/Site/public/html/perfilEmpresa.html
+++ b/Site/public/html/perfilEmpresa.html
@@ -14,24 +14,23 @@
 <body>
 
     <!--Header-->
-    <!--Header caso a empresa esteja logada-->
-    <div class="divHeaderFather">
+    <!--Header caso o usuário esteja vendo logado-->
+    <div class="divHeaderFather" style="position: unset;">
         <div class="divHeaderContainer">
-            <a href="../index.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
+            <a href="localhost:3000/html/homepageAlt.html"><img class="logo" src="../Logo-Dev4Me/logo-nome-simples-dev4me.png"
                     onmouseover="src='../Logo-Dev4Me/logo-nome-degrade-dev4me.png';"
                     onmouseout="src='../Logo-Dev4Me/logo-nome-simples-dev4me.png';"></a>
 
             <div class="divButtons">
-
-                <a href="./perfilEmpresa.html" style="margin-right: 7%;"><img class="imgProfile"
-                        src="../img/user-profile-white.png" onmouseout="src='../img/user-profile-blue.png';"
-                        onmouseover="src='../img/user-profile-white.png';"></a>
-                <a href="./feedVagas.html"><img class="imgIcon" src="../img/home-button-white.png"
+                <a href="localhost:3000/html/perfilEmpresa.html" style="margin-right: 7%;"><img class="imgProfile"
+                        src="../img/user-profile-white.png" onmouseover="src='../img/user-profile-blue.png';"
+                        onmouseout="src='../img/user-profile-white.png';"></a>
+                <a href="localhost:3000/html/feedEmpresa.html"><img class="imgIcon" src="../img/home-button-white.png"
                         onmouseover="src='../img/home-button-blue.png';"
                         onmouseout="src='../img/home-button-white.png';"></a>
-
             </div>
         </div>
+    </div>
 
         <!--Sidebar-->
         <div class="divSideBar" id="divSideBar">
